--- a/.htaccess
+++ b/.htaccess
@@ -2,11 +2,11 @@
 # BEGIN WordPress
 <IfModule mod_rewrite.c>
 RewriteEngine On
-RewriteBase /sites/vg-novo/
+RewriteBase /sites/verde-ghaia/
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /sites/vg-novo/index.php [L]
+RewriteRule . /sites/verde-ghaia/index.php [L]
 </IfModule>
 
 # END WordPress
